--- a/templates/foodWasteDetail.html
+++ b/templates/foodWasteDetail.html
@@ -17,7 +17,15 @@
   <center>
    <form action="addwaste" method="POST" >
     <div class="form-group">
-      <label for="name">Waste</label>
+      <label for="name">Food</label>
+      <input
+        type="name"
+        id="name"
+        name="food"
+        class="form-control"
+        placeholder="Enter food name"
+      />
+      <label for="name">Weight</label>
       <input
         type="number"
         id="name"
@@ -28,6 +36,9 @@
     </div>
     <button type="submit" class="btn btn-primary">Add waste</button>
     </form>
+    <br>
+    <br>
+    <a href="login"><button type="button" value="LOGOUT">LOGOUT</button></a>
   </center>
 </body>
 </html>
