--- a/templates/foodWasteDetail.html
+++ b/templates/foodWasteDetail.html
@@ -1,44 +1,76 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/journal/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-</head>
-<body>
-  <center>
-   <form action="addwaste" method="POST" >
-    <div class="form-group">
-      <label for="name">Food</label>
-      <input
-        type="name"
-        id="name"
-        name="food"
-        class="form-control"
-        placeholder="Enter food name"
-      />
-      <label for="name">Weight</label>
-      <input
-        type="number"
-        id="name"
-        name="quant"
-        class="form-control"
-        placeholder="Enter food waste in Kilograms"
-      />
+    <title>Manager Home Page</title>
+  </head>
+  <body>
+    <div class="container">
+    <div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Manager Home Page</h1>
+      <form action="addwaste" method="POST">
+      <!-- <div style="margin-left: 30%;">
+          <input type="radio" name="loggedAs"> Stud
+          <input type="radio" name="loggedAs" style="margin-left: 30px;"> Manager
+      </div>
+        -->
+        <div class="form-group">
+          <label for="email">Enter Food Item:</label>
+          <input
+            type="text"
+            id="email"
+            name="food"
+            class="form-control"
+            placeholder="Enter Food"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Quantity</label>
+          <input
+            type="number"
+            id="password"
+            name="quan"
+            class="form-control"
+            placeholder="Enter Password"
+          />
+        </div>
+        <button type="submit" name = "loginsubmit" class="btn btn-primary btn-block">Submit</button>
+      </form>
+      <br>
+      <br>
+      <a href="viewfeed"><button>View feedbacks</button></a>
+<!--       <p class="lead mt-4">
+        No Account? <a href="signup.html">Register</a>
+      </p> -->
     </div>
-    <button type="submit" class="btn btn-primary">Add waste</button>
-    </form>
-    <br>
-    <br>
-    <a href="login"><button type="button" value="LOGOUT">LOGOUT</button></a>
-  </center>
-</body>
+  </div>
+</div>    
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
