--- a/templates/foodWasteDetail.html
+++ b/templates/foodWasteDetail.html
@@ -39,16 +39,16 @@
           <input
             type="number"
             id="password"
-            name="quan"
+            name="quant"
             class="form-control"
-            placeholder="Enter Password"
+            placeholder="Enter Weight in kilograms"
           />
         </div>
         <button type="submit" name = "loginsubmit" class="btn btn-primary btn-block">Submit</button>
       </form>
       <br>
       <br>
-      <a href="viewfeed"><button>View feedbacks</button></a>
+      <a href="viewfeed"><button class="btn btn-primary btn-block">View feedbacks</button></a>
 <!--       <p class="lead mt-4">
         No Account? <a href="signup.html">Register</a>
       </p> -->
