--- a/templates/foodWasteDetail.html
+++ b/templates/foodWasteDetail.html
@@ -52,6 +52,41 @@
 <!--       <p class="lead mt-4">
         No Account? <a href="signup.html">Register</a>
       </p> -->
+
+    <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Manager Home Page</h1>
+      <form action="postAttend" method="POST">
+      <!-- <div style="margin-left: 30%;">
+          <input type="radio" name="loggedAs"> Stud
+          <input type="radio" name="loggedAs" style="margin-left: 30px;"> Manager
+      </div>
+        -->
+        <div class="form-group">
+          <label for="email">Enter Present student count:</label>
+          <input
+            type="number"
+            id="email"
+            name="present"
+            class="form-control"
+            placeholder="Enter Food"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Total students:</label>
+          <input
+            type="number"
+            id="password"
+            name="total"
+            class="form-control"
+            placeholder="Enter Weight in kilograms"
+          />
+        </div>
+        <button type="submit" name = "loginsubmit" class="btn btn-primary btn-block">Submit</button>
+      </form>
+      <br>
+      <br>
+      <a href="viewfeed"><button class="btn btn-primary btn-block">View feedbacks</button></a>
     </div>
   </div>
 </div>    
