--- a/templates/foodWasteDetail.html
+++ b/templates/foodWasteDetail.html
@@ -52,10 +52,9 @@
 <!--       <p class="lead mt-4">
         No Account? <a href="signup.html">Register</a>
       </p> -->
-
-    <div class="col-md-6 m-auto">
+</div><br><br>  
+    <div class="col-md-12 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Manager Home Page</h1>
       <form action="postAttend" method="POST">
       <!-- <div style="margin-left: 30%;">
           <input type="radio" name="loggedAs"> Stud
@@ -69,7 +68,7 @@
             id="email"
             name="present"
             class="form-control"
-            placeholder="Enter Food"
+            placeholder="Present students count"
           />
         </div>
         <div class="form-group">
@@ -79,16 +78,15 @@
             id="password"
             name="total"
             class="form-control"
-            placeholder="Enter Weight in kilograms"
+            placeholder="Total students"
           />
         </div>
         <button type="submit" name = "loginsubmit" class="btn btn-primary btn-block">Submit</button>
       </form>
-      <br>
-      <br>
-      <a href="viewfeed"><button class="btn btn-primary btn-block">View feedbacks</button></a>
+      <br><br>
+        <a href="getAttend"><button class="btn btn-primary btn-block">View Attendance</button></a>
     </div>
-  </div>
+  
 </div>    
     </div>
 
